--- a/public2/admin.html
+++ b/public2/admin.html
@@ -16,9 +16,9 @@
                         <td style="line-height:12pt; height:10px;">
                           <span class="pagetop">
                             <b>
-                              <a href="news">Ben's Blog</a>
+                              <a href="news">Cynthia's Blog</a>
                             </b>
-                            <a href="//benjojo.co.uk">Main Site</a> | 
+                            <a href="//cynthia.re">Main Site</a> | 
                             <a href="/all">All Posts</a><!--  | 
                             <a href="/random">Random Post</a> -->
                         </span>
