--- a/public2/hometempl.html
+++ b/public2/hometempl.html
@@ -4,7 +4,7 @@
     <meta content="origin" name="referrer">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/main.css?2018" rel="stylesheet" type="text/css">
-    <title>Benjojo's Blog</title>
+    <title>Cynthia's Blog</title>
 </head>
 <center>
 <body style= "background-color: #FFF">
@@ -17,15 +17,15 @@
                         <td style="line-height:12pt; height:10px;">
                           <span class="pagetop">
                             <b>
-                              <a href="/">Ben's Blog</a>
+                              <a href="/">Cynthia's Blog</a>
                             </b>
-                            <a href="//benjojo.co.uk">Main Site</a> | 
+                            <a href="//cynthia.re">Main Site</a> | 
                             <a href="/">All Posts</a>
                         </span>
                       </td>
 
                         <td style="text-align:right;padding-right:4px;">
-                        <span class="pagetop"><a href="https://twitter.com/benjojo12">Twitter</a> | <a href="/rss.xml">RSS</a></span></td>
+                        <span class="pagetop"><a href="https://twitter.com/bitcynth">Twitter</a> | <a href="/rss.xml">RSS</a></span></td>
                     </tr>
                 </table>
             </td>
@@ -73,7 +73,7 @@
                         <td style="background-color: #555"></td>
                     </tr>
                 </table><br>
-                <span class="links"><a href="https://github.com/benjojo/bnblog">Like the blogging engine? Click here to see the code</a></span><br>
+                <span class="links"><a href="https://github.com/bitcynth/blog">Like the blogging engine? Click here to see the code</a></span><br>
                 <br>
                 <br>
             </td>
