--- a/public2/pagetempl.html
+++ b/public2/pagetempl.html
@@ -10,7 +10,7 @@
 <body style= "background-color: #FFF">
 
 <div class="topbar">
-    <a style="float: left" href="/">< All posts</a><a style="padding-left: 10px;" href="https://twitter.com/benjojo12">Twitter</a><a style="padding-left: 10px;" href="/rss.xml">RSS</a><a href="https://github.com/benjojo"> GitHub</a>
+    <a style="float: left" href="/">< All posts</a><a style="padding-left: 10px;" href="https://twitter.com/bitcynth">Twitter</a><a style="padding-left: 10px;" href="/rss.xml">RSS</a><a href="https://github.com/bitcynth"> GitHub</a>
 </div>
 
 <div class="contain">
